--- a/manuscript/main.tex
+++ b/manuscript/main.tex
@@ -153,7 +153,7 @@ Renegotiation & Never; fifty years; twenty years; five years; one year \\
 \end{center}
 \end{table}
 
-The categories map main conceptual differences between polycentric and state-led climate mitigation policies \citep[e.g.][]{bechtel2013mass, ostrom1990governing}. The conjoint experiment design open the possibility for respondents to combine multiple levels of governance into a single climate change agreement as they see fit. We give no prior indication of whether a certain value is more prevalent in actual agreements, and we randomise the values to ensure that they all have the same probability of being selected. In total, there are 6,000 possible value combinations. Figure~\ref{fig:conjoint} illustrates our experimental design.
+The categories map main conceptual differences between polycentric and state-led climate mitigation policies \citep[e.g.][]{bechtel2013mass, ostrom1990governing}. The conjoint experiment design opens the possibility for respondents to combine multiple levels of governance into a single climate change agreement as they see fit. We give no prior indication of whether a certain value is more prevalent in actual agreements, and we randomise the values to ensure that they all have the same probability of being selected. In total, there are 6,000 possible value combinations. Figure~\ref{fig:conjoint} illustrates our experimental design.
 
 \begin{figure}[H]
 	\centering
@@ -162,7 +162,7 @@ The categories map main conceptual differences between polycentric and state-led
 	\label{fig:conjoint}
 \end{figure}
 
-We estimate our models with the \texttt{cregg} package \citep{leeper2018cregg} for the \texttt{R} statistical language \citep{rstats2019}. Here we report marginal means instead of average marginal conditional effects (AMCE) of climate agreement attributes. \citet{leeper2018subgroup} show that AMCEs can be misleading in subgroup analysis as model results are sensitive to the choice of reference categories in interactions. In contrast, marginal means provide a clear description of quantities of interest, in our case preferences towards agreement attributes, while allowing for easy comparisons between groups of respondents. For these reasons, we include marginal means in the visual presentation of our results, but readers can refer to the Supplementary Material for AMCE estimates.  
+We estimate our models with the \texttt{cregg} package \citep{leeper2018cregg} for the \texttt{R} statistical language \citep{rstats2019}. Here we report marginal means instead of average marginal conditional effects (AMCE) of climate agreement attributes. \citet{leeper2018subgroup} show that AMCEs can be misleading in subgroup analysis as model results are sensitive to the choice of reference categories in interactions. In contrast, marginal means provide a clear description of quantities of interest, in our case preferences towards agreement attributes, while allowing for easy comparisons between groups of respondents. For these reasons, we include marginal means in the visual presentation of our results. Readers can refer to the Supplementary Material for AMCE estimates.  
 
 \section{Results}%
 \label{sec:results}
@@ -176,17 +176,17 @@ Figure~\ref{fig:pooled} shows our main results. The graph illustrates the prefer
 	\label{fig:pooled}
 \end{figure}
 
-Respondents prefer international organisations to establish climate mitigation rules (54\%, SE = 1.2), but they also hold favourable views of local communities (51.6\%, SE = 1.25), local governments (49.8\%, SE = 1.2), and state governments (48.6\%, SE = 1.3) as rule-makers. Although local communities receive slightly more support than the other alternatives, the differences among the three groups are not statistically significant. Interestingly, Latin American elites support multiple levels simultaneously, what suggests they are willing to incorporate separate political spheres into the climate change regime. We also observe that non-governmental organisations are the least preferred option for climate change rule-making with 45.5\% (SE = 1.3). 
+Respondents prefer international organisations to establish climate mitigation rules (54\%, SE = 1.2), but they also hold favourable views of local communities (51.6\%, SE = 1.25), local governments (49.8\%, SE = 1.2), and state governments (48.6\%, SE = 1.3) as rule-makers. Although local communities receive slightly more support than the other alternatives, the differences among the three groups are not statistically significant. We note that Latin American elites support multiple governance levels simultaneously, what suggests they are willing to include separate political spheres into a single climate regime. We also observe that non-governmental organisations are the least preferred option for climate change rule-making with 45.5\% (SE = 1.3). 
 
-We see a similar pattern with respect to conflict resolution. Respondents suggest disputes should be addressed mainly by the United Nations and local courts. These two choices have 57.3\% (SE = 1.2) and 54.6\% (SE = 1.2) approval, respectively. Private arbitration comes next with 50\% (SE = 1.3), followed by government bureaucracy with 46.4\% (SE = 1.3). Informal norms receive only 41\% support (SE = 1.3). 
+We see a similar pattern with respect to conflict resolution. Respondents affirm disputes should be addressed mainly by the United Nations and local courts. These two choices have 57.3\% (SE = 1.2) and 54.6\% (SE = 1.2) approval, respectively. Private arbitration comes next with 50\% (SE = 1.3), followed by government bureaucracy with 46.4\% (SE = 1.3). Informal norms receive only 41\% support (SE = 1.3). 
 
 Participants agree with graduated sanctions to repeated offenders (53.2\%, SE = 0.9) and they believe agreement costs should be allocated according to the country's history of emissions (53.6\%, SE = 1.1). Moreover, related to the same idea of proportionality, respondents indicate that lawbreakers should be punished with fines (55.3\%, SE = 1.1), which can be easily increased if necessary.
 
-We find no evidence that rich countries alone should bear the burden of climate change mitigation costs. Latin American elites believe developing countries should also contribute to the provision of global public goods. This suggests that elites view it was legitimate to contribute to climate change solutions, so this may not be a major source of free riding to climate change solutions in the region.
+We find no evidence that rich countries alone should bear the burden of climate change mitigation costs. Latin American elites believe developing countries should also contribute to the provision of global public goods. Our sample views it was legitimate to contribute to climate change solutions, so this may not be a major source of free riding to climate change solutions in the region.
 
 In terms of agreement duration, respondents are interested in a balance between stability and flexibility. Agreements that either cannot be modified or that last for 50 years are rejected by the interviewees. Their preference lies in agreements that can be renegotiated every five years (59\%, SE = 1.2), as they are durable enough to provide long-term incentives to the parties, yet still adaptable to unforeseen demands.
 
-Overall, the results do not conform to strictly top-down or bottom-down approaches. While elites favour solutions provided at the macro level, they are also open to input from other government actors and local groups. But we find that respondents do not fully agree with polycentric arrangements. As we noted above, the data do not show major difference in preferences between federal and local governments and between these and community-based solutions. Further, the rejection on non-governmental organisations points to a discredit of self-governing arrangements as a means to deal with global warming. This last result is consistent with the Latin American tradition of heavier reliance on the state than on voluntary organisations.
+Overall, the results do not conform to strictly top-down or bottom-down approaches. While elites favour solutions provided at the macro level, they are also open to input from other government actors and local groups. But we find that respondents do not fully agree with polycentric arrangements either. As we noted above, the data do not show major difference in preferences between federal and local governments and between these and community-based solutions. Further, the rejection on non-governmental organisations points to a discredit of self-governing arrangements as a means to deal with global warming. This last result is consistent with the Latin American tradition of heavier reliance on the state than on voluntary organisations.
 
 \begin{figure}[H]
 	\centering
