small text revisions

--- a/manuscript/main.tex
+++ b/manuscript/main.tex
@@ -68,7 +68,7 @@
 
 \doublespacing
 
-\title{Do Elites Support Polycentric Climate Governance? Evidence from Ten Latin American Countries\thanks{We thank Nigel Ashford, F\'{a}bio Barros, Daniel D'Amico, Malte Hendricks, Christian H\"{u}bner, Karina Marzano, Emily Skarbek, and Matias Spektor for helpful and engaging feedback. This research received financial support from the Konrad Adenauer Stiftung Latin American Regional Programme for Energy Security and Climate (EKLA-KAS). The authors declare there are no conflicts of interest. The data, code, and any additional materials required to replicate all analyses in this article are available at \href{http://github.com/danilofreire/climate-governance}{\texttt{http://github.com/danilofreire/climate-governance}}.}}
+\title{Do Elites Support Polycentric Climate Governance? Evidence from Latin American Countries\thanks{We thank Nigel Ashford, F\'{a}bio Barros, Daniel D'Amico, Malte Hendricks, Christian H\"{u}bner, Karina Marzano, Emily Skarbek, and Matias Spektor for helpful and engaging feedback. This research received financial support from the Konrad Adenauer Stiftung Latin American Regional Programme for Energy Security and Climate (EKLA-KAS). The authors declare there are no conflicts of interest. The data, code, and any additional materials required to replicate all analyses in this article are available at \href{http://github.com/danilofreire/climate-governance}{\texttt{http://github.com/danilofreire/climate-governance}}.}}
 
 \author{Danilo Freire\thanks{Postdoctoral Research Associate, The Political Theory Project, Brown University, Providence, RI 02912, USA, \href{mailto:danilo_freire@brown.edu}{\texttt{danilo\_freire@brown.edu}}, \href{http://danilofreire.github.io}{\texttt{http://danilofreire.github.io}}, \href{http://twitter.com/danilofreire}{\texttt{http://twitter.com/danilofreire}}, Voice: +1 (401) 584-2494. Corresponding author.} 
 \and Umberto Mignozzetti\thanks{School of International Relations, Funda\c{c}\~{a}o Getulio Vargas, S\~{a}o Paulo, SP, Brazil and Wilf Family Department of Politics, NYU, NY, USA, \href{mailto:umberto.mig@nyu.edu}{\texttt{umberto.mig@nyu.edu}}, \href{http://umbertomig.com}{\texttt{http://umbertomig.com}}, \href{http://twitter.com/umbertomig}{\texttt{http://twitter.com/umbertomig}}.} \and David Skarbek\thanks{The Department of Political Science and the Political Theory Project, Brown University, Providence, RI, USA, \href{mailto:david_skarbek@brown.edu}{\texttt{david\_skarbek@brown.edu}}, \href{http://davidskarbek.com}{\texttt{http://davidskarbek.com}}, \href{http://twitter.com/davidskarbek}{\texttt{http://twitter.com/davidskarbek}}.}
@@ -92,7 +92,7 @@ Policy makers generally assume that climate change mitigation requires global sc
 \vspace{.5cm}
 
 \noindent 
-\textbf{Word count:} 3,527
+\textbf{Word count:} 3,524
 \end{abstract}
 
 \newpage
@@ -106,7 +106,7 @@ Over the last years, we have seen an emerging consensus about the causes and con
 
 Yet this consensus does not translate itself into effective political action. Global climate negotiations have progressed slowly under the guidelines of the United Nations Framework Convention on Climate Change (UNFCCC), and there is wide scepticism that multilateral talks will move faster in the next years \citep{cole2015advantages, hjerpe2015views}. As carbon dioxide emissions continue to increase, current efforts are likely to be insufficient to meet the Paris Agreement target of $2^{\circ}$C temperature rise above pre-industrial levels \citep{jordan2015emergence}. Existing research affirms that this unsatisfactory performance is partially due to institutional design \citep{ostrom2014polycentric, cole2015advantages}. For instance, multilateral forums downplay the domestic constraints political leaders experience when implementing strategies to reduce greenhouse gas emissions \citep{rayner2010eat}. Universal binding agreements also offer limited scope for experimentation, which hinders the ability for individuals to solve complex collective action problems \citep{de2014global}.
 
-Recently, scholars have argued that polycentric approaches provide a better `institutional fit' for natural resource systems \citep{turnheim2018innovating,berkhout2003negotiating, carlisle2017polycentric, ostrom1990governing}. Polycentrism is defined as a political arrangement in which formally independent units operating at different levels engage in a continuous process of cooperation and competition \citep{cole2015advantages,aligica2013co}. Experiences such as inshore fisheries in Turkey and timber management in Switzerland show that polycentrism induces individual cooperation and allows communities to avoid the `tragedy of the commons', that is, the overexploitation of shared resources \citep{hardin1968tragedy, ostrom1990governing}. Authors also point out that polycentric systems improve accountability as decentralisation reduces rent-seeking opportunities for politicians and interest groups \citep{turnheim2018innovating,ostrom2012nested,ostrom2014polycentric,sovacool2013adaptation}. 
+Recently, scholars have argued that polycentric approaches provide a better \textit{institutional fit} for natural resource systems \citep{turnheim2018innovating, berkhout2003negotiating, carlisle2017polycentric, ostrom1990governing}. Polycentrism is defined as a political arrangement in which formally independent units operating at different levels engage in a continuous process of cooperation and competition \citep{cole2015advantages, aligica2013co}. Experiences such as inshore fisheries in Turkey and timber management in Switzerland show that polycentrism induces individual cooperation and allows communities to avoid the \textit{tragedy of the commons}, that is, the overexploitation of shared resources \citep{hardin1968tragedy, ostrom1990governing}. Authors also point out that polycentric systems improve accountability as decentralisation reduces rent-seeking opportunities for politicians and interest groups \citep{turnheim2018innovating, ostrom2012nested, ostrom2014polycentric, sovacool2013adaptation}. 
 
 Despite the potential advantages of polycentric arrangements, two challenges may undermine their efficiency and popular support. First, polycentric systems demand constant civic participation at multiple government levels. Because climate change has diffuse benefits but concentrated costs, individuals have few incentives to join collective efforts \citep{barrett2003increasing, heitzig2011self, nordhaus2015climate}. Second, individuals tend to heavily discount climate change investments \citep{dasgupta2008discounting, nordhaus1997discounting}. Reducing carbon emissions requires significant expenditures today, yet the benefits of climate mitigation will arise only in a distant future. In that regard, citizens might prefer state-based initiatives to prevent climate change if private costs are too high or expected results too uncertain. 
 
@@ -119,11 +119,11 @@ In what follows, we describe our experimental methods and results. We then turn 
 \section{Data and Methods}%
 \label{sec:data_and_methods}
 
-We use conjoint experiments to estimate the effect of institutional features on climate mitigation agreements. Our sample consists of Latin American elites. Latin America is the most biodiverse region in the world and plays a major role in global climate mitigation projects. For instance, the Amazon basin contains about half of the world's carbon stock, so local elites are essential for the success of emissions trading markets \citep{benitez2006site,yang2018post}. Second, Latin American elites have wide disagreements over preservation policies, and the recent shift towards populist governments has highlighted the need for a robust framework to protect environmental resources \citep{ellner2019pinktide,lyall2019speculative,sagarzazu2019foreign}. In that regard, veto players can counterbalance governmental time discounting and secure the long-term provision of public goods. Lastly, survey experiments on climate policies have focused on a small set of developed countries, so truly comparative experimental work remains scarce. We fill this gap by analysing 10 countries where elites have different stakes at climate change negotiations.  
+We use conjoint experiments to estimate the effect of institutional features on climate mitigation agreements. Our sample consists of Latin American elites. Latin America is the most biodiverse region in the world and plays a major role in global climate mitigation projects. For instance, the Amazon basin contains about half of the world's carbon stock, so local elites are essential for the success of emissions trading markets \citep{benitez2006site, yang2018post}. Second, Latin American elites have wide disagreements over preservation policies, and the recent shift towards populist governments has highlighted the need for a robust framework to protect environmental resources \citep{ellner2019pinktide, lyall2019speculative, sagarzazu2019foreign}. In that regard, veto players can counterbalance governmental time discounting and secure the long-term provision of public goods. Lastly, survey experiments on climate policies have focused on a small set of developed countries, so truly comparative experimental work remains scarce. We fill this gap by analysing 10 countries where elites have different stakes at climate change negotiations.  
 
-We use a dataset compiled specifically for this study. From 1\textsuperscript{st} of October to 5\textsuperscript{th} of December 2018, we ran an elite survey in Argentina, Bolivia, Brazil, Chile, Colombia, Costa Rica, Ecuador, Mexico, Panama, and Peru. We started by collecting information on Latin American elites. Our target was to interview 10 members of the Executive, 10 members of the Legislative, 15 academics, and 15 members of the civil society per country. To do so, we built a dataset of prospective respondents ten times our country target. Then, we ran an online and telephone survey where we collected information regarding the climate change agreements and other related questions.
+We use a dataset compiled specifically for this study. From 1\textsuperscript{st} of October to 5\textsuperscript{th} of December 2018, we ran an elite survey in Argentina, Bolivia, Brazil, Chile, Colombia, Costa Rica, Ecuador, Mexico, Panama, and Peru. We started by gathering information on Latin American elites. For each country, we collected the profiles of 100 members of the Executive, 100 members of the Legislative, 150 academics in the energy sector, and 150 members of the civil society. We then sampled these profiles until we achieved a minimum of 10\% of responses within each group. We ran our survey both online and by telephone, collecting information on the climate change agreements and other related questions.
 
-After finishing this dataset, we started the surveying stage. From 12\textsuperscript{th} of November to 5\textsuperscript{th} of December, we ran the survey by contacting elite members by phone or by email. We had two teams of enumerators, one based in S\~{a}o Paulo and another based in Rio de Janeiro, Brazil, comprised of Portuguese and Spanish native speakers. Although the overall aim of the survey was 500 responses, the teams collected 654 interviews. Please refer to the Supplementary Material for more information about the sampling process and descriptive statistics.
+After finishing this dataset, we started the surveying stage. From 12\textsuperscript{th} of November to 5\textsuperscript{th} of December, we ran the survey by contacting elite members by phone or by email. We had two teams of enumerators, one based in S\~{a}o Paulo and another based in Rio de Janeiro, Brazil, comprised of Portuguese and Spanish native speakers. Please refer to the Supplementary Material for more information about the sampling process and descriptive statistics.
 
 The hypothetical climate change agreements includes six attributes: 1) which organisation defines the rules; 2) how would conflicts be resolved; 3) what punishment should be applied to rule-breakers; 4) how should repeated violations be sanctioned; 5) which countries should bear the costs of the agreement; 6) how often should the agreement be renegotiated. Table~\ref{tab:categories} describes the values we included in each treaty attribute. \\
 
@@ -153,7 +153,7 @@ Renegotiation & Never; fifty years; twenty years; five years; one year \\
 \end{center}
 \end{table}
 
-The categories map main conceptual differences between polycentric and state-led climate mitigation policies \citep[e.g.][]{bechtel2013mass, ostrom1990governing}. The conjoint experiment design opens the possibility for respondents to combine multiple levels of governance into a single climate change agreement as they see fit. We give no prior indication of whether a certain value is more prevalent in actual agreements, and we randomise the values to ensure that they all have the same probability of being selected. In total, there are 6,000 possible value combinations. Figure~\ref{fig:conjoint} illustrates our experimental design.
+The categories map main conceptual differences between polycentric and state-led climate mitigation policies \citep[e.g.][]{bechtel2013mass, ostrom1990governing}. The conjoint experiment design opens the possibility for interviewees to combine multiple levels of governance into a single climate change agreement as they see fit. We give no prior indication of whether a certain value is more prevalent in actual agreements, and we randomise the values to ensure that they all have the same probability of being selected. In total, there are 6,000 possible value combinations. Figure~\ref{fig:conjoint} illustrates our experimental design.
 
 \begin{figure}[H]
 	\centering
@@ -184,9 +184,9 @@ Participants agree with graduated sanctions to repeated offenders (53.2\%, SE = 
 
 We find no evidence that rich countries alone should bear the burden of climate change mitigation costs. Latin American elites believe developing countries should also contribute to the provision of global public goods. Our sample views it was legitimate to contribute to climate change solutions, so this may not be a major source of free riding to climate change solutions in the region.
 
-In terms of agreement duration, respondents are interested in a balance between stability and flexibility. Agreements that either cannot be modified or that last for 50 years are rejected by the interviewees. Their preference lies in agreements that can be renegotiated every five years (59\%, SE = 1.2), as they are durable enough to provide long-term incentives to the parties, yet still adaptable to unforeseen demands.
+In terms of agreement duration, respondents are interested in a balance between stability and flexibility. Interviewees reject agreements that either cannot be modified or that last for 50 years. Their preference lies in agreements that can be renegotiated every five years (59\%, SE = 1.2), as they are durable enough to provide long-term incentives to the parties, yet still adaptable to unforeseen demands.
 
-Overall, the results do not conform to strictly top-down or bottom-down approaches. While elites favour solutions provided at the macro level, they are also open to input from other government actors and local groups. But we find that respondents do not fully agree with polycentric arrangements either. As we noted above, the data do not show major difference in preferences between federal and local governments and between these and community-based solutions. Further, the rejection on non-governmental organisations points to a discredit of self-governing arrangements as a means to deal with global warming. This last result is consistent with the Latin American tradition of heavier reliance on the state than on voluntary organisations.
+Overall, the results do not conform to strictly top-down or bottom-down approaches. While elites favour solutions provided at the macro level, they are also open to input from other government actors and local groups. But we find little support for fully polycentric arrangements either. As we noted above, the data do not show major difference in preferences between federal and local governments and between these and community-based solutions. Further, the rejection on non-governmental organisations points to a discredit of self-governing arrangements as a means to deal with global warming. This last result is consistent with the Latin American tradition of heavier reliance on the state than on voluntary organisations.
 
 \begin{figure}[H]
 	\centering
@@ -197,7 +197,7 @@ Overall, the results do not conform to strictly top-down or bottom-down approach
 
 We also examine how our results vary across countries and types of elites. Figure~\ref{fig:countries} displays the preferred climate change agreement characteristics for each of the 10 countries in our sample. The disaggregated data confirm that elites have a generalised preference for a heavy role by international agencies in terms of solving conflicts, and a generalised dislike for informal norms. In addition, the cross-country results show a preference for a positive role by federal and local governments, and that local community members should also participate in the deliberation process.
 
-However, some of the regional preferences are a by-product of sample aggregation. Latin American countries do not have a consensus on which organisations should provide the rules. For example, Costa Rica prefers local to global rule-making; Mexico prefers global and dislikes local, similar to Peru, Argentina, and Brazil; Colombia prefers global and local rule-making simultaneously; and Bolivia prefers local organisations to design climate treaties. This is an important point and has far-reaching consequences for policy design in the region. The lack of coordination on rule-making responsibilities may configure a case of Arrow's impossibility theorem \citep{arrow1950difficulty}. Should a polycentric system be put for vote at international arenas such as the United Nations or the Organisation of American States, it is not clear how elites would reach a consensus decision. Based on our data, we cannot affirm which outcome would prevail. 
+However, some of the regional preferences are a by-product of sample aggregation. Latin American elites do not have a consensus on which organisations should provide the rules. For example, elites in Costa Rica prefer local to global rule-making; in Mexico, they prefer global and dislike local, similar to Peru, Argentina, and Brazil; in Colombia, elites favour global and local rule-making simultaneously; and in Bolivia, respondents prefer local organisations to design climate treaties. This is an important point and has far-reaching consequences for policy design in the region. The lack of coordination on rule-making responsibilities may configure a case of Arrow's impossibility theorem \citep{arrow1950difficulty}. Should a polycentric system be put for vote at international arenas such as the United Nations or the Organisation of American States, it is not clear how elites would reach a consensus decision. Based on our data, we cannot affirm which outcome would prevail. 
 
 Figure~\ref{fig:types} shows the results disaggregated by elite type. Academics, members of the civil society, and representatives in the executive and legislative branches hold similar views about how conflicts should be resolved, what punishment to apply to lawbreakers (fines and blacklisting), and the duration of the agreements. These are in line with our previous results.
 
@@ -213,7 +213,7 @@ Significant differences emerge in two of the six attributes of interest. First, 
 \section{Discussion}
 \label{sec:discussion}
 
-In this article, we examine which attributes of climate change mitigation treaties Latin American elites support. We find that respondents prefer international organisations to resolve conflicts, are favourable to imposing increasing fines on violators and renewing agreements every five years. Survey participants are sceptical about non-governmental organisations and consistently reject informal norms as an instrument to solve disputes. Taken together, our experiment suggests that Latin American elites oppose non-governmental organisations as rule-makers and want legal punishment to agreement violators. 
+In this article, we examine which attributes of climate change mitigation treaties Latin American elites support. We find that interviewees prefer international organisations to resolve conflicts, are favourable to imposing increasing fines on violators and renewing agreements every five years. Survey participants are sceptical about non-governmental organisations and consistently reject informal norms as an instrument to solve disputes. Taken together, our experiment suggests that Latin American elites oppose non-governmental organisations as rule-makers and want legal punishment to agreement violators. 
 
 While our results confirm that Latin Americans prefer the state to conduce public policy, they do not match the typical cases of centralised or polycentric climate change regimes suggested in the literature. After disaggregating the data by country and elite type, we confirm that elites prefer international organisations to resolve disputes and that federal and local sources of governance should have a say in climate agreements. However, we find large heterogeneity in the responses, with groups holding different opinions on how competences should be divided. 
 
